fixed dark mode chat page

--- a/local/src/index.css
+++ b/local/src/index.css
@@ -105,6 +105,10 @@ body, html {
   overflow-x: hidden;
 }
 
+body:has(.theme-shadow) {
+  background-color: #353333;
+}
+
 /* Custom Clean Scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
